chromeos: fix infinite loop in cursor lookup

And remove a NOTREACHED that we're hitting. I will supply a test for this
separate, as well as investgating removal of NOREACHED.

BUG=855767
TEST=none

Change-Id: Idf59b80388fefa06317a70055d18db995187c9a0
Reviewed-on: https://chromium-review.googlesource.com/1134352
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574371}
Former-commit-id: 1d9f316a0ba47bb4be158db0de5edc596272dabe